# waypwr

./: Cargo.toml  LICENSE  README.md  crates.nix  flake.nix  result
src/: app.rs  cli.rs  config.rs  main.rs
